# todo-api

./: .env-dist  .gitignore  Dockerfile  README.md  db.sqlite3-shm  db.sqlite3-wal  docker-compose.yml  pyproject.toml
app/: auth.py  main.py
app/api/: api.py
app/api/endpoints/: login.py  todos.py  users.py
app/core/: config.py
app/crud/: crud_todo.py  crud_user.py
app/db/: base.py  session.py
app/models/: todo.py  user.py
app/schemas/: todo.py  user.py
tests/: conftest.py  test_login.py  test_todos.py  test_users.py
